gatekeeper/templates/allowed-users-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedusers
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedUsers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedusers

        violation[{"msg": msg}] {
          input.review.object.spec.securityContext.runAsUser == 0
          msg := "Pod securityContext cannot run as root user (runAsUser: 0)"
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container %v securityContext cannot run as root user (runAsUser: 0)", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("InitContainer %v securityContext cannot run as root user (runAsUser: 0)", [container.name])
        }
