gatekeeper/templates/host-network-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8shostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shostnetwork

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "hostNetwork: true is not allowed"
        }
